# log-analyzer

./: .gitignore  Cargo.toml  README.md  README_zh.md  build.sh  nfpm.yaml  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/: analyze-log.md  develop-log-analyzer.md
benchmarks/: bench.py
docs/: benchmarks.md
python/log_analyzer/: __init__.py  cli.py
scripts/: bench.py
src/: bindings.rs  error.rs  lib.rs
src/engine/: collector.rs  fast.rs  mod.rs  processor.rs  stream.rs
src/index/: builder.rs  mod.rs
src/operator/: crud.rs  filter.rs  mod.rs  replace.rs
src/repo/: metadata.rs  mod.rs  storage.rs  workspace.rs
tests/: test_append.py  test_collector.py  test_engine.py  test_integration.py  test_python_repo.py  test_repo.rs  test_workspace.rs  test_workspace_py.py
